Compatibility with WooCommerce fixed

--- a/assets/ecocleaner.html
+++ b/assets/ecocleaner.html
@@ -1,37 +1,37 @@
-<form class="form_container">
+<form id="ecocleaner_form" class="form_container">
 
-        <p class="alert"></p>
-        <div class="form-row">
-            <div class="naczynia">Płyn do naczyń</div>
-            <input type="number" placeholder="0 zł" name="naczynia-cena">
-        </div>
-        <div class="form-row">
-            <div class="podlogi">Preparaty do podłóg</div>
-            <input type="number" placeholder="0 zł" name="podlogi-cena">
-        </div>
-        <div class="form-row">
-            <div class="dywany">Preparaty do dywanów</div>
-            <input type="number" placeholder="0 zł" name="dywany-cena">
-        </div>
-        <div class="form-row">
-            <div class="kuchnia">Środki czystości kuchenne</div>
-            <input type="number" placeholder="0 zł" name="kuchnia-cena">
-        </div>
-        <div class="form-row">
-            <div class="lazienka">Środki czystości łazienkowe</div>
-            <input type="number" placeholder="0 zł" name="lazienka-cena">
-        </div>
-        <div class="form-row">
-            <div class="okna">Preparaty do mycia okien</div>
-            <input type="number" placeholder="0 zł" name="okna-cena">
-        </div>
-        <div class="form-row">
-            <div class="inne">Inne</div>
-            <input type="number" placeholder="0 zł" name="inne-cena">
-        </div>
-        <div class="form-row send">
-            <span class="razem">Razem</span>
-            <button class="razem-cena"> Tekst </button>
-        </div>
-        
-    </form>
+    <p class="alert"></p>
+    <div class="form-row">
+        <div class="naczynia">Płyn do naczyń</div>
+        <input type="number" placeholder="0 zł" name="naczynia-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="podlogi">Preparaty do podłóg</div>
+        <input type="number" placeholder="0 zł" name="podlogi-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="dywany">Preparaty do dywanów</div>
+        <input type="number" placeholder="0 zł" name="dywany-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="kuchnia">Środki czystości kuchenne</div>
+        <input type="number" placeholder="0 zł" name="kuchnia-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="lazienka">Środki czystości łazienkowe</div>
+        <input type="number" placeholder="0 zł" name="lazienka-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="okna">Preparaty do mycia okien</div>
+        <input type="number" placeholder="0 zł" name="okna-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="inne">Inne</div>
+        <input type="number" placeholder="0 zł" name="inne-cena" value="">
+    </div>
+    <div class="form-row send">
+        <p class="razem">Razem</p>
+        <button class="razem-cena"> Policz </button>
+    </div>
+    
+</form>
