More form options added

--- a/assets/ecocleaner.html
+++ b/assets/ecocleaner.html
@@ -2,36 +2,61 @@
 
     <p class="alert"></p>
     <div class="form-row">
-        <div class="naczynia">Płyn do naczyń</div>
-        <input type="number" placeholder="0 zł" name="naczynia-cena" value="">
+        <div class="okna">Preparaty do mycia okien</div>
+        <input type="number" placeholder="0 zł" name="okna-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="lazienka">Preparaty do umywalki i wanien</div>
+        <input type="number" placeholder="0 zł" name="lazienka-cena" value="">
     </div>
     <div class="form-row">
         <div class="podlogi">Preparaty do podłóg</div>
         <input type="number" placeholder="0 zł" name="podlogi-cena" value="">
     </div>
     <div class="form-row">
+        <div class="glazura">Preparaty do glazury</div>
+        <input type="number" placeholder="0 zł" name="glazura-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="meble">Preparaty do czyszczenia mebli</div>
+        <input type="number" placeholder="0 zł" name="meble-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="naczynia">Płyn do naczyń</div>
+        <input type="number" placeholder="0 zł" name="naczynia-cena" value="">
+    </div>
+    <div class="form-row">
         <div class="dywany">Preparaty do dywanów</div>
         <input type="number" placeholder="0 zł" name="dywany-cena" value="">
     </div>
     <div class="form-row">
-        <div class="kuchnia">Środki czystości kuchenne</div>
-        <input type="number" placeholder="0 zł" name="kuchnia-cena" value="">
+        <div class="gabki">Gąbki, ściereczki, ręczniki jednorazowe, mopy do podłóg</div>
+        <input type="number" placeholder="0 zł" name="gabki-cena" value="">
+    </div>
+
+    <div class="form-row">
+        <div class="kosmetyki">Peeling do ciała, waciki, kosmetyki do demakijażu</div>
+        <input type="number" placeholder="0 zł" name="kosmetyki-cena" value="">
     </div>
     <div class="form-row">
-        <div class="lazienka">Środki czystości łazienkowe</div>
-        <input type="number" placeholder="0 zł" name="lazienka-cena" value="">
+        <div class="samochod">Mycie samochodu</div>
+        <input type="number" placeholder="0 zł" name="samochod-cena" value="">
     </div>
     <div class="form-row">
-        <div class="okna">Preparaty do mycia okien</div>
-        <input type="number" placeholder="0 zł" name="okna-cena" value="">
+        <div class="kamien">Środki do usuwania kamienia</div>
+        <input type="number" placeholder="0 zł" name="kamien-cena" value="">
+    </div>
+    <div class="form-row">
+        <div class="woda">Zużycie wody</div>
+        <input type="number" placeholder="0 zł" name="woda-cena" value="">
     </div>
     <div class="form-row">
         <div class="inne">Inne</div>
         <input type="number" placeholder="0 zł" name="inne-cena" value="">
     </div>
     <div class="form-row send">
-        <p class="razem">Razem</p>
+        <div class="razem">Razem</div>
         <button class="razem-cena"> Policz </button>
     </div>
-    
+
 </form>
